--- a/src/app/bookingsummary-edit/bookingsummary-edit.component.html
+++ b/src/app/bookingsummary-edit/bookingsummary-edit.component.html
@@ -184,7 +184,7 @@
                 </table>
             </mat-card>
         </div>
-        <button mat-stroked-button class="submitBtn" type="submit">Done</button>
+        <button mat-button class="submitBtn" type="submit">Done</button>
         <button mat-stroked-button class="submitBtn-disabled" routerLink="/summary">Back</button>
 
     </form>
