--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -1,31 +1,25 @@
-@media (min-width: 820px)
-{
-    body
-    {
-        background-image: url('../../assets/aboutus.jpg');
+@media (min-width: 820px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
-        
     }
-    .logo
-    {
-         max-width: 200px;
-         height: 100px !important;
-         margin-left: 30px !important;
-         margin-top: 20px !important;
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
     }
-      .spacer{
+    .spacer {
         flex: 1 1 auto;
-      }
-    .mat-toolbar{
+    }
+    .mat-toolbar {
         width: 100%;
         height: 80px;
     }
-    .menuBtn
-    {
+    .menuBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         font-size: 17px;
@@ -33,12 +27,11 @@
         margin: 30px;
         margin-top: 40px;
     }
-    
-    .menuBtn:hover, .menuBtn:active {
-        color:#dd0346;
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
     }
-    .toolbarBtn
-    {
+    .toolbarBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
@@ -46,13 +39,11 @@
         margin-top: 40px;
         font-size: 17px;
     }
-    
-    .toolbarBtn:hover, .toolbarBtn:active {
-        color:#dd0346;
+    .toolbarBtn:hover,
+    .toolbarBtn:active {
+        color: #dd0346;
     }
-    
-    .loginBtn
-    {
+    .loginBtn {
         float: right !important;
         width: 140px;
         height: 40px;
@@ -61,175 +52,144 @@
         color: #FFFFFF;
         font-size: 15px;
     }
-    
-    .loginBtn:hover, .loginBtn:active {
-        color:#f9dcc4;
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
     }
-    .mat-icon
-    {
+    .mat-icon {
         font-size: 20px;
     }
-.mat-card
-{
-    width: 1000px;
-    height: fit-content;
-    border-radius: 20px;
-    position: center;
-    margin: auto;
-    margin-top: 50px;
-    
-    background: rgba(0, 0, 0, 0.6);
-
+    .mat-card {
+        width: 1000px;
+        height: fit-content;
+        border-radius: 20px;
+        position: center;
+        margin: auto;
+        margin-top: 50px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .img1 {
+        width: 30%;
+        margin-top: 100px;
+        margin-right: 50px;
+    }
+    .img2 {
+        width: 30%;
+        margin-top: 100px;
+    }
+    .description {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        padding-top: 100px;
+        color: #FFFFFF;
+    }
+    .title {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        color: #FCBF49;
+        position: center;
+        margin: auto;
+        margin-top: 30px !important;
+    }
+    .footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
 
-.description
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    padding-top: 100px;
-    color: #FFFFFF;
-    
-}
-.title
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    color: #FFFFFF;
-    position: center;
-    margin: auto;
-    margin-top: 30px !important;
-}
-
-.footer
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
-
-}
-@media (max-width: 576px)
-{
-    body
-    {
-        background-image: url('../../assets/pricingmobilebg.jpg');
+@media (max-width: 576px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
-        
     }
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-
-  .ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 30px;
-  position: center;
-  color: #FFFFFF;
-}
-
-
-.pricingBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 80px;
-    margin-top: 0;
-    display: none;
-}
-
-.contactUsBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 0;
-    display: none;
-}
-
-.aboutusBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 0;
-    display: none;
-}
-
-.menuBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 0;
-    display: none;
-}
-
-.mat-card
-{
-    width: 90%;
-    height: fit-content;
-    border-radius: 20px;
-    position: center;
-    margin: auto;
-    margin-top: 50px;
-    background: rgba(0, 0, 0, 0.6);
-    
-}
-
-.logo
-    {
+    .mat-toolbar {
+        background-color: #D62828;
+        width: 100%;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 30px;
+        position: center;
+        color: #FFFFFF;
+    }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 17px;
+        float: left;
+        margin-left: 100px;
+        margin-top: 80px;
+        margin-top: 0;
+        display: none;
+    }
+    .contactUsBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 17px;
+        float: left;
+        margin-left: 100px;
+        margin-top: 0;
+        display: none;
+    }
+    .aboutusBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 17px;
+        float: left;
+        margin-left: 100px;
+        margin-top: 0;
+        display: none;
+    }
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 17px;
+        float: left;
+        margin-left: 100px;
+        margin-top: 0;
+        display: none;
+    }
+    .mat-card {
+        width: 90%;
+        height: fit-content;
+        border-radius: 20px;
+        position: center;
+        margin: auto;
+        margin-top: 50px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .logo {
         width: 40%;
         height: 40%;
         position: center;
         margin: auto;
         margin-top: 30px !important;
     }
-
-    .title
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: #FFFFFF;
-    position: center;
-    margin: auto;
-    margin-top: 30px !important;
-    
-}
-
-.description
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    padding-top: 100px;
-    color: #FFFFFF;
-    
-}
-
-
-.footer
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
-
+    .title {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        color: #FFFFFF;
+        position: center;
+        margin: auto;
+        margin-top: 30px !important;
+    }
+    .description {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
+        padding-top: 100px;
+        color: #FFFFFF;
+    }
+    .footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
