--- a/src/app/bookingsummary-edit/bookingsummary-edit.component.css
+++ b/src/app/bookingsummary-edit/bookingsummary-edit.component.css
@@ -254,16 +254,14 @@
         background-color: #fcb42a;
         color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        display: flex;
-        justify-content: center;
+        font-size: 16px;
         margin: auto;
         margin-top: 20px;
         float: right;
     }
     .submitBtn:hover,
     .submitBtn:active {
-        color: #ffccd5;
+        color: #14213D;
     }
     .submitBtn-disabled {
         width: 100px;
@@ -271,9 +269,7 @@
         border-color: #fcb42a !important;
         color: #14213D !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        display: flex;
-        justify-content: center;
+        font-size: 16px;
         margin: auto;
         margin-top: 20px;
         margin-right: 20px;
