--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -102,6 +102,11 @@
         float: left;
         margin-left: -50px;
     }
+    .label {
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
+    }
     .reminder {
         width: 1000px;
         height: 100px;
@@ -137,11 +142,6 @@
         font-size: 30px;
         margin-top: 15px;
         margin-left: 70px;
-    }
-    .label {
-        color: grey;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 15px;
     }
     table,
     tr,
@@ -244,15 +244,14 @@
         font-size: 17px;
     }
     .submitBtn {
-        width: 200px;
-        height: 40px;
+        margin-left: 870px;
+        width: 180px;
+        height: 50px;
         background-color: #fcb42a;
         color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
-        display: flex;
         text-align: center;
-        margin: auto;
         margin-top: 20px;
     }
     .submitBtn:hover,
@@ -260,15 +259,13 @@
         color: #14213D;
     }
     .submitBtn-disabled {
-        width: 200px;
-        height: 40px;
+        margin-left: 870px;
+        width: 180px;
+        height: 50px;
         border-color: #fcb42a !important;
         color: #14213D !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
-        display: flex;
-        text-align: center;
-        margin: auto;
         margin-top: 20px;
     }
     .cancelBtn {
