--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -238,10 +238,10 @@ mat-list-item {
 }
 
 .cancelBtn {
-    width: 130px;
+    width: 100px;
     height: 50px;
     font-size: 16px;
-    margin-top: -80px;
+    margin-top: 20px;
     margin-left: 220px;
     margin-bottom: 10px;
     color: #003049;
@@ -252,7 +252,7 @@ mat-list-item {
 .saveBtn {
     width: 130px;
     height: 50px;
-    margin: auto;
+    margin-top: 20px;
     margin-bottom: 35px;
     font-size: 16px;
     float: right;
@@ -260,4 +260,9 @@ mat-list-item {
     color: #FFFFFF;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #fcb42a;
+}
+
+.saveBtn:hover,
+.saveBtn:active {
+    color: #14213D;
 }
