--- a/src/app/edit-address/edit-address.component.html
+++ b/src/app/edit-address/edit-address.component.html
@@ -52,7 +52,7 @@
         <form [formGroup]="serviceInfoForm" (ngSubmit)="serviceInfoSubmit()">
             <mat-card class="card">
 
-                <p>
+                <!--<p>
                     <mat-form-field class="addtextfields" appearance="outline">
                         <mat-label>Service Address</mat-label>
                         <input matInput formControlName="address" [errorStateMatcher]="matcher" autocomplete="off">
@@ -60,10 +60,46 @@
                             Service Adresss is required.
                         </mat-error>
                     </mat-form-field>
+                </p>-->
+
+                <p>
+                    <mat-form-field class="cityselect" appearance="outline">
+                        <mat-label>Select a City</mat-label>
+                        <mat-select formControlName="service_city" [errorStateMatcher]="matcher">
+                            <mat-option *ngFor="let cit of city" [value]="cit">
+                                {{cit}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="locationForm.get('service_city').hasError('required')">
+                            You must make a selection
+                        </mat-error>
+                    </mat-form-field>
+
+                    <!--Barangay-->
+                    <mat-form-field class="zipcode" appearance="outline">
+                        <mat-label>Barangay</mat-label>
+                        <input matInput type="text" formControlName="service_barangay" [errorStateMatcher]="matcher" autocomplete="off">
+                        <mat-error *ngIf="locationForm.get('service_barangay').hasError('required')">
+                            Input valid barangay
+                        </mat-error>
+                        <mat-error *ngIf="locationForm.get('service_barangay').hasError('pattern')">
+                            Input valid barangay
+                        </mat-error>
+                    </mat-form-field>
                 </p>
                 <p>
                     <mat-form-field class="textfields" appearance="outline">
-                        <mat-label>Service Address Details</mat-label>
+                        <mat-label>Service Address</mat-label>
+                        <input matInput formControlName="addressDetails" [errorStateMatcher]="matcher" autocomplete="off">
+                        <mat-error *ngIf="serviceInfoForm.get('addressDetails').hasError('required')">
+                            Service Adresss Details is required.
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+
+                <p>
+                    <mat-form-field class="textfields" appearance="outline">
+                        <mat-label>Unit #, Floor/Bldg.</mat-label>
                         <input matInput formControlName="addressDetails" [errorStateMatcher]="matcher" autocomplete="off">
                         <mat-error *ngIf="serviceInfoForm.get('addressDetails').hasError('required')">
                             Service Adresss Details is required.
