--- a/src/app/menu-tv/menu-tv.component.css
+++ b/src/app/menu-tv/menu-tv.component.css
@@ -1,31 +1,25 @@
-@media (min-width: 820px)
-{
-    body
-    {
-        background-image: url('../../assets/tv repair.jpg');
+@media (min-width: 820px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
-        
     }
-    .logo
-    {
-         max-width: 200px;
-         height: 100px !important;
-         margin-left: 30px !important;
-         margin-top: 20px !important;
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
     }
-      .spacer{
+    .spacer {
         flex: 1 1 auto;
-      }
-    .mat-toolbar{
+    }
+    .mat-toolbar {
         width: 100%;
         height: 80px;
     }
-    .menuBtn
-    {
+    .menuBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         font-size: 17px;
@@ -33,12 +27,11 @@
         margin: 30px;
         margin-top: 40px;
     }
-    
-    .menuBtn:hover, .menuBtn:active {
-        color:#dd0346;
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
     }
-    .toolbarBtn
-    {
+    .toolbarBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
@@ -46,13 +39,11 @@
         margin-top: 40px;
         font-size: 17px;
     }
-    
-    .toolbarBtn:hover, .toolbarBtn:active {
-        color:#dd0346;
+    .toolbarBtn:hover,
+    .toolbarBtn:active {
+        color: #dd0346;
     }
-    
-    .loginBtn
-    {
+    .loginBtn {
         float: right !important;
         width: 140px;
         height: 40px;
@@ -61,319 +52,251 @@
         color: #FFFFFF;
         font-size: 15px;
     }
-    
-    .loginBtn:hover, .loginBtn:active {
-        color:#f9dcc4;
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
     }
-    .mat-icon
-    {
+    .mat-icon {
         font-size: 20px;
     }
-.mat-card
-{
-    width: 1000px;
-    height: 600px;
-    border-radius: 20px;
-    position: center;
-    margin: auto;
-    margin-top: 50px;
-    background: rgba(0, 0, 0, 0.6);
+    .mat-card {
+        width: 1000px;
+        height: 600px;
+        border-radius: 20px;
+        position: center;
+        margin: auto;
+        margin-top: 50px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .description {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        padding-top: 20px;
+        color: #FFFFFF;
+    }
+    .title {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        color: #FFFFFF;
+        padding-top: 50px;
+        float: left;
+        margin-left: 100px;
+    }
+    .title2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        color: #FFFFFF;
+        padding-top: 50px;
+        float: right;
+        margin-right: 120px;
+    }
+    .text_icon {
+        color: #FCBF49;
+        font-size: 25px;
+    }
+    .services {
+        float: left;
+        margin-left: -270px;
+        margin-top: 100px;
+    }
+    .service1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        margin-top: 20px;
+        color: #FFFFFF;
+        float: left;
+    }
+    .service2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #FFFFFF;
+    }
+    .types {
+        float: right;
+        margin-right: 220px;
+        margin-top: 5px;
+    }
+    .type1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        margin-top: 20px;
+        color: #FFFFFF;
+        float: right;
+    }
+    .type2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #FFFFFF;
+    }
+    .bookBtn {
+        font-size: 18px;
+        font-family: 'Trebuchet MS';
+        background-color: #f2a612;
+        color: #FFFFFF;
+        width: fit-content;
+        height: 50px;
+        margin: auto;
+        margin-top: 300px;
+        float: right;
+    }
+    .pricingBtn {
+        font-size: 18px;
+        font-family: 'Trebuchet MS';
+        background-color: #f2a612;
+        color: #FFFFFF;
+        width: fit-content;
+        height: 50px;
+        margin: 20px;
+        margin-top: 300px;
+        float: right;
+    }
+    .bookBtn:hover,
+    .bookBtn:active {
+        color: #14213D;
+    }
+    .pricingBtn:hover,
+    .pricingBtn:active {
+        color: #14213D;
+    }
+    .footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
 
-.description
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    padding-top: 20px;
-    color: #FFFFFF;
-    
-}
-.title
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    color: #FFFFFF;
-    padding-top: 50px;
-    float: left;
-    margin-left: 100px;
-}
-
-.title2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    color: #FFFFFF;
-    padding-top: 50px;
-    float: right;
-    margin-right: 120px;
-}
-.text_icon
-{
-    color: #FCBF49;
-    font-size: 25px;
-    
-}
-
-.services
-{
-    float: left;
-    margin-left: -270px;
-    margin-top: 100px;
-}
-.service1
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-top: 20px;
-    color: #FFFFFF;
-    float: left;
-    
-}
-
-.service2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #FFFFFF;
-}
-
-.types
-{
-    float: right;
-    margin-right: 220px;
-    margin-top: 5px;
-}
-
-.type1
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-top: 20px;
-    color: #FFFFFF;
-    float: right;
-}
-
-.type2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #FFFFFF;
-}
-
-
-.bookBtn
-{
-    font-size: 18px;
-    font-family: 'Trebuchet MS';
-    background-color: #D62828;
-    color: #FFFFFF;
-    width: fit-content;
-    height: 50px;
-    margin: auto;
-    margin-top: 300px;
-    float: right;
-}
-
-.pricingBtn
-{
-    font-size: 18px;
-    font-family: 'Trebuchet MS';
-    background-color: #D62828;
-    color: #FFFFFF;
-    width: fit-content;
-    height: 50px;
-    margin: 20px;
-    margin-top: 300px;
-    float: right;
-}
-.footer
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
-}
-
-@media (max-width: 576px)
-{
-    body
-    {
-        background-image: url('../../assets/tvmobilebg.jpg');
+@media (max-width: 576px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
-        
     }
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-
-  .ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 30px;
-  position: center;
-  color: #FFFFFF;
-}
-
-mat-card
-{
-    width: 350px;
-    height: 700px;
-    border-radius: 20px;
-    position: center;
-    margin: auto;
-    margin-top: 50px;
-    
-    background: rgba(0, 0, 0, 0.6);
-
-}
-
-.description
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    padding-top: 20px;
-    color: #FFFFFF;
-    
-}
-.title
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #FFFFFF;
-    padding-top: 30px;
-    float: left;
-    margin-left: 100px;
-}
-
-.title2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #FFFFFF;
-    padding-top: 200px;
-    position: center;
-    margin: auto;
-}
-text_icon
-{
-    color: #FCBF49;
-    font-size: 15px;
-    
-}
-
-.services
-{
-    float: left;
-    margin-left: 50px;
-    margin-top: -15px;
-}
-.service1
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    margin-top: 40px;
-    color: #FFFFFF;
-    float: left;
-    
-   
-}
-
-.service2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #FFFFFF;
-    
-    
-}
-
-.service3
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #FFFFFF;
-    
-}
-
-.types
-{
-    position: center;
-    margin: auto;
-    margin-top: 5px;
-}
-
-.type1
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    margin-top: 30px;
-    color: #FFFFFF;
-    position: center;
-      
-}
-
-.type2
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #FFFFFF;
-    
-    
-}
-
-.type3
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #FFFFFF;
-    
-}
-
-.bookBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #FFFFFF;
-    color: #D62828;
-    text-decoration: none;
-    text-align: center;
-    width: 35%;
-    height: 5%;
-    border-radius: 3px;
-    float: right;
-    margin-right: 20px;
-    margin-top: 50px;
-    font-size: 15px;
-}
-
-.pricingBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #FFFFFF;
-    color: #D62828;
-    text-decoration: none;
-    text-align: center;
-    width: 30%;
-    height: 5%;
-    border-radius: 3px;
-    float: right;
-    margin-right: 80px;
-    margin-top: 50px;
-    font-size: 15px;
-}
-.footer
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
-
+    .mat-toolbar {
+        background-color: #D62828;
+        width: 100%;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 30px;
+        position: center;
+        color: #FFFFFF;
+    }
+    mat-card {
+        width: 350px;
+        height: 700px;
+        border-radius: 20px;
+        position: center;
+        margin: auto;
+        margin-top: 50px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .description {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 12px;
+        padding-top: 20px;
+        color: #FFFFFF;
+    }
+    .title {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #FFFFFF;
+        padding-top: 30px;
+        float: left;
+        margin-left: 100px;
+    }
+    .title2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #FFFFFF;
+        padding-top: 200px;
+        position: center;
+        margin: auto;
+    }
+    text_icon {
+        color: #FCBF49;
+        font-size: 15px;
+    }
+    .services {
+        float: left;
+        margin-left: 50px;
+        margin-top: -15px;
+    }
+    .service1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        margin-top: 40px;
+        color: #FFFFFF;
+        float: left;
+    }
+    .service2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+    .service3 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+    .types {
+        position: center;
+        margin: auto;
+        margin-top: 5px;
+    }
+    .type1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        margin-top: 30px;
+        color: #FFFFFF;
+        position: center;
+    }
+    .type2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+    .type3 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+    .bookBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #FFFFFF;
+        color: #D62828;
+        text-decoration: none;
+        text-align: center;
+        width: 35%;
+        height: 5%;
+        border-radius: 3px;
+        float: right;
+        margin-right: 20px;
+        margin-top: 50px;
+        font-size: 15px;
+    }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #FFFFFF;
+        color: #D62828;
+        text-decoration: none;
+        text-align: center;
+        width: 30%;
+        height: 5%;
+        border-radius: 3px;
+        float: right;
+        margin-right: 80px;
+        margin-top: 50px;
+        font-size: 15px;
+    }
+    .footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
