--- a/src/app/pricing/pricing.component.css
+++ b/src/app/pricing/pricing.component.css
@@ -1,31 +1,25 @@
-@media (min-width: 820px)
-{
-    body
-    {
-        background-image: url('../../assets/aboutus.jpg');
+@media (min-width: 820px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
-        
     }
-    .logo
-    {
-         max-width: 200px;
-         height: 100px !important;
-         margin-left: 30px !important;
-         margin-top: 20px !important;
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
     }
-      .spacer{
+    .spacer {
         flex: 1 1 auto;
-      }
-    .mat-toolbar{
+    }
+    .mat-toolbar {
         width: 100%;
         height: 80px;
     }
-    .menuBtn
-    {
+    .menuBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         font-size: 17px;
@@ -33,12 +27,11 @@
         margin: 30px;
         margin-top: 40px;
     }
-    
-    .menuBtn:hover, .menuBtn:active {
-        color:#dd0346;
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
     }
-    .toolbarBtn
-    {
+    .toolbarBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
@@ -46,13 +39,11 @@
         margin-top: 40px;
         font-size: 17px;
     }
-    
-    .toolbarBtn:hover, .toolbarBtn:active {
-        color:#dd0346;
+    .toolbarBtn:hover,
+    .toolbarBtn:active {
+        color: #dd0346;
     }
-    
-    .loginBtn
-    {
+    .loginBtn {
         float: right !important;
         width: 140px;
         height: 40px;
@@ -61,432 +52,322 @@
         color: #FFFFFF;
         font-size: 15px;
     }
-    
-    .loginBtn:hover, .loginBtn:active {
-        color:#f9dcc4;
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
     }
-    .mat-icon
-    {
+    .mat-icon {
         font-size: 20px;
     }
-.title
-{
-    font-size: 30px;
-    color: #003049;
-    position: center !important;
-    margin-top: 50px;
+    .title {
+        font-size: 30px;
+        color: #f2a612;
+        position: center !important;
+        margin-top: 50px;
+    }
+    .mat-tab-group {
+        width: fit-content;
+        position: center !important;
+        margin-top: 50px !important;
+        margin: auto;
+    }
+    .repaircard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px;
+        float: left;
+        margin-left: 50px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .cleaningcard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px;
+        float: left;
+        margin-left: 20px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .installcard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px;
+        float: left;
+        margin-left: 20px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .airconrepair {
+        font-size: 20px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    .airconfee {
+        font-size: 17px;
+        color: #FCBF49;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    .aircondescrip {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 50px;
+    }
+    .aircondescrip2 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    .text_icon {
+        color: #FCBF49;
+        font-size: 25px;
+    }
+    .repairservice1 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+    }
+    .cleaningservice1 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+        margin-top: 50px;
+    }
+    .cleaningservice2 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+    }
+    .refrepaircard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px !important;
+        position: center !important;
+        margin: auto;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .washingrepaircard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px !important;
+        float: left;
+        margin-left: 100px !important;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .washinginstallcard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px !important;
+        float: left;
+        margin-left: 50px !important;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .footer {
+        height: 100%;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
 
-.mat-tab-group
-{
-    width: fit-content;
-    position: center !important;
-    margin-top: 50px !important;
-    margin: auto;
-}
-
-.repaircard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px;
-    float: left;
-    margin-left: 50px;
-    background: rgba(0, 0, 0, 0.6);
-}
-
-.cleaningcard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px;
-    float: left;
-    margin-left: 20px;
-    background: rgba(0, 0, 0, 0.6);
-}
-
-.installcard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px;
-    float: left;
-    margin-left: 20px;
-    background: rgba(0, 0, 0, 0.6);
-}
-
-
-.airconrepair
-{
-    font-size: 20px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-}
-
-.airconfee
-{
-    font-size: 17px;
-    color: #F77F00;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-    
-}
-
-.aircondescrip
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 50px;
-}
-
-.aircondescrip2
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-}
-
-.text_icon
-{
-    color: #FCBF49;
-    font-size: 25px;
-}
-.repairservice1
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: left;
-   
-}
-
-.cleaningservice1
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: left;
-    margin-top: 50px;
-   
-}
-.cleaningservice2
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: left;
-  
-   
-}
-
-.refrepaircard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px !important;
-    position: center !important;
-    margin: auto;
-    background: rgba(0, 0, 0, 0.6);
-
-}
-
-.washingrepaircard
-{
-
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px !important;
-    float: left;
-    margin-left: 100px !important;
-    background: rgba(0, 0, 0, 0.6);
-}
-
-.washinginstallcard
-{
-
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px !important;
-    float: left;
-    margin-left: 50px !important;
-    background: rgba(0, 0, 0, 0.6);
-}
-
-.footer
-{
-    height: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
-}
-@media (max-width: 576px)
-{
-    body
-    {
-        background-image: url('../../assets/pricingmobilebg.jpg');
+@media (max-width: 576px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: fit-content;
         background-attachment: fixed;
-        
     }
-
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-
-  .ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 30px;
-  position: center;
-  color: #FFFFFF;
-}
-
-.mat-card
-{
-    width: 350px;
-    height: 700px;
-    border-radius: 20px;
-    position: center;
-    margin: auto;
-    margin-top: 50px;
-    
-    background: rgba(0, 0, 0, 0.6);
-
-}
-
-.description
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    padding-top: 20px;
-    color: #FFFFFF;
-    
-}
-
-
-
-.pricingBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 10px;
-    float: left;
-    margin-left: 40px;
-    margin-top: 80px;
-    margin-top: 0;
-    display: none;
-}
-
-
-.contactUsBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 10px;
-    float: left;
-    margin-left: 40px;
-    margin-top: 0;
-    display: none;
-}
-
-
-.aboutusBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 10px;
-    float: left;
-    margin-left: 40px;
-    margin-top: 0;
-    display: none;
-}
-
-
-.menuBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 10px;
-    float: left;
-    margin-left: 40px;
-    margin-top: 0;
-    display: none;
-}
-
-.title
-{
-    font-size: 20px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-}
-
-mat-tab-group
-{
-    width: 100%;
-    position: center !important;
-    margin-top: 50px !important;
-    margin: auto;
-    
-}
-
-.repaircard
-{
-    width: 270px;
-    height: 500px;
-    border-radius: 20px;
-    margin-top: 40px;
-    position: center !important;
-    
-}
-
-.cleaningcard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px;
-    position: center !important;
-}
-
-.installcard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px;
-    position: center !important;
-}
-
-
-.airconrepair
-{
-    font-size: 20px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-}
-
-.airconfee
-{
-    font-size: 17px;
-    color: #F77F00;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-    
-}
-
-.aircondescrip
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 50px;
-}
-
-.aircondescrip2
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: center !important;
-    margin-top: 20px;
-}
-
-.text_icon
-{
-    color: #FCBF49;
-    font-size: 25px;
-}
-.repairservice1
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: left;
-   
-}
-
-.cleaningservice1
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: left;
-    margin-top: 50px;
-   
-}
-.cleaningservice2
-{
-    font-size: 15px;
-    color: #FFFFFF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: left;
-  
-   
-}
-
-.refrepaircard
-{
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px !important;
-    position: center !important;
-    margin: auto;
-
-}
-
-.washingrepaircard
-{
-
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px !important;
-    position: center !important;
-}
-
-.washinginstallcard
-{
-
-    width: 270px;
-    height: 600px;
-    border-radius: 20px;
-    margin-top: 40px !important;
-    position: center !important;
-}
-
-.footer
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
+    .mat-toolbar {
+        background-color: #D62828;
+        width: 100%;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 30px;
+        position: center;
+        color: #FFFFFF;
+    }
+    .mat-card {
+        width: 350px;
+        height: 700px;
+        border-radius: 20px;
+        position: center;
+        margin: auto;
+        margin-top: 50px;
+        background: rgba(0, 0, 0, 0.6);
+    }
+    .description {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 12px;
+        padding-top: 20px;
+        color: #FFFFFF;
+    }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 10px;
+        float: left;
+        margin-left: 40px;
+        margin-top: 80px;
+        margin-top: 0;
+        display: none;
+    }
+    .contactUsBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 10px;
+        float: left;
+        margin-left: 40px;
+        margin-top: 0;
+        display: none;
+    }
+    .aboutusBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 10px;
+        float: left;
+        margin-left: 40px;
+        margin-top: 0;
+        display: none;
+    }
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 10px;
+        float: left;
+        margin-left: 40px;
+        margin-top: 0;
+        display: none;
+    }
+    .title {
+        font-size: 20px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    mat-tab-group {
+        width: 100%;
+        position: center !important;
+        margin-top: 50px !important;
+        margin: auto;
+    }
+    .repaircard {
+        width: 270px;
+        height: 500px;
+        border-radius: 20px;
+        margin-top: 40px;
+        position: center !important;
+    }
+    .cleaningcard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px;
+        position: center !important;
+    }
+    .installcard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px;
+        position: center !important;
+    }
+    .airconrepair {
+        font-size: 20px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    .airconfee {
+        font-size: 17px;
+        color: #FCBF49;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    .aircondescrip {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 50px;
+    }
+    .aircondescrip2 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        position: center !important;
+        margin-top: 20px;
+    }
+    .text_icon {
+        color: #FCBF49;
+        font-size: 25px;
+    }
+    .repairservice1 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+    }
+    .cleaningservice1 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+        margin-top: 50px;
+    }
+    .cleaningservice2 {
+        font-size: 15px;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+    }
+    .refrepaircard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px !important;
+        position: center !important;
+        margin: auto;
+    }
+    .washingrepaircard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px !important;
+        position: center !important;
+    }
+    .washinginstallcard {
+        width: 270px;
+        height: 600px;
+        border-radius: 20px;
+        margin-top: 40px !important;
+        position: center !important;
+    }
+    .footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
