--- a/src/app/profileform/profileform.component.html
+++ b/src/app/profileform/profileform.component.html
@@ -97,10 +97,10 @@
             </div>
             <div>
                 <div class="row">
-                    <div class="col-12">
+                    <!--<div class="col-12">
                         <p class="paper-label">Service Address</p>
                         <p class="mt-2">{{address}}</p>
-                    </div>
+                    </div>-->
                     <div class="col-12">
                         <p class="paper-label">Service Address Details (Unit No., Block/Lot No., Bldg./Tower)</p>
                         <p class="mt-2">{{addressDetails}}</p>
