--- a/src/app/requestdetails-pending/requestdetails-pending.component.css
+++ b/src/app/requestdetails-pending/requestdetails-pending.component.css
@@ -1,4 +1,16 @@
 @media (min-width: 820px) {
+    .sidenav-container {
+        height: 100%;
+    }
+    .sidenav {
+        width: fit-content;
+        width: 250px;
+        background-color: #FFFFFF;
+    }
+    .mat-sidenav-content {
+        height: 910px;
+        background-color: white;
+    }
     .mat-toolbar {
         width: 100%;
         height: 80px;
@@ -6,69 +18,114 @@
     .logo {
         max-width: 200px;
         height: 100px !important;
-        margin-left: 30px !important;
-        margin-top: 20px !important;
-    }
-    .homeBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
         float: left;
-        margin: 30px;
-        margin-left: 80px;
-        margin-top: 40px;
+        margin-top: -20px !important;
+        margin-left: 25px;
     }
-    .homeBtn:hover,
-    .homeBtn:active {
-        color: #dd0346;
+    .adminvector {
+        width: 95%;
+        margin-top: -60px !important;
+        margin-left: 10px;
     }
-    .menuBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .sidetitle {
         color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-    }
-    .menuBtn:hover,
-    .menuBtn:active {
-        color: #dd0346;
-    }
-    .pricingBtn {
+        font-size: 20px;
+        margin-top: -10px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+    }
+    .nav-icon {
         color: #003049;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-        font-size: 17px;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
     }
-    .pricingBtn:hover,
-    .pricingBtn:active {
-        color: #dd0346;
+    mat-list-item {
+        background-color: transparent !important;
     }
-    .contactUsBtn {
+    .dashboardside {
+        margin-left: 0px;
+        margin-top: 50px;
+        text-align: justify;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        background-color: #D6B2BD;
+    }
+    .dashboard-btn {
+        color: #003049;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+        text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .bookingside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .bookingside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .booking-btn {
         color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-    }
-    .contactUsBtn:hover,
-    .contactUsBtn:active {
-        color: #dd0346;
-    }
-    .aboutusBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
     }
-    .aboutusBtn:hover,
-    .aboutusBtn:active {
-        color: #dd0346;
+    .profileside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .profileside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .profile-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .spacer {
         flex: 1 1 auto;
@@ -82,42 +139,91 @@
         margin: auto;
         margin-top: 50px;
     }
+    .backBtn {
+        font-size: 20px;
+        float: left;
+        margin-top: -10px !important;
+        margin-left: -200px !important;
+        background-color: grey;
+    }
+    .backicon {
+        color: #FFFFFF;
+        float: left;
+        margin-left: 2px;
+        font-size: 35px;
+    }
     .summary {
-        width: 750px;
-        height: fit-content;
+        width: 900px;
+        height: 650px;
         margin-top: 50px !important;
         position: center !important;
         margin: auto;
     }
-    .title {
-        color: #003049;
+    .remindervector {
+        width: 20%;
+        margin-top: -65px !important;
+        float: left;
+        margin-left: -50px;
+    }
+    .label {
+        color: grey;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 20px;
-        margin-top: -25px;
-        margin-left: 40px;
+        font-size: 15px;
     }
-    .icon {
-        color: #003049;
+    .title {
+        color: #b65e79;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 30px;
-        margin-top: 5px;
-        margin-left: 20px;
+        margin-top: 15px;
+        margin-left: 70px;
     }
-    .personalinfotxt {
-        color: #003049;
+    table,
+    tr,
+    th,
+    td {
+        border: none;
+    }
+    .table {
+        margin-top: 50px;
+    }
+    .header1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #b65e79;
+        border: none;
+    }
+    .body1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        margin-top: 25px;
+        color: #14213D;
+        border: none;
+    }
+    .header2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #b65e79;
+        border: none;
+    }
+    .body2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #14213D;
+        border: none;
     }
     .cancelBtn {
-        width: 120px;
+        width: 140px;
         height: 40px;
         background-color: #D62828;
         color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 13px;
+        font-size: 15px;
         float: right;
         margin: 5px;
         margin-top: 1px;
+    }
+    .cancelBtn:hover,
+    .cancelBtn:active {
+        color: #f9dcc4;
     }
     .proceedBtn {
         width: 100px;
