--- a/src/app/reschedule/reschedule.component.html
+++ b/src/app/reschedule/reschedule.component.html
@@ -1,102 +1,142 @@
-<mat-toolbar>
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-    <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
-    <mat-menu #menu="matMenu">
-        <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-        <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-        <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-        <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-        <button mat-menu-item routerLink="/menu_tv">Television</button>
-    </mat-menu>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+        <br>
+        <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/customervector.png">
 
-    <label class="pricingBtn" routerLink="/pricing">Pricing</label>
-    <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
-    <label class="aboutusBtn" routerLink="/about_us">About Us</label>
-    <label class="aboutusBtn" routerLink="/dashboard">Home</label>
-</mat-toolbar>
-<div class="container">
-    <div>
-        <mat-card class="summary">
-            <form [formGroup]="scheduleForm" (ngSubmit)="schedSubmit()">
-                <div>
-                    <img class="reschedulevec" mat-card-image src="../../assets/reschedule.png">
+            <h1 class="sidetitle">{{fname}}</h1>
+            <div class="dashboardside" routerLink="/dashboard">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn">Home</a>
+                </mat-list-item>
+            </div>
+            <div class="bookingside" routerLink="/booking">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
+                    <a class="booking-btn">Book a Service</a>
+                </mat-list-item>
+            </div>
+            <div class="profileside" routerLink="/profile">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn">Profile</a>
+                </mat-list-item>
+            </div>
 
-                    <h1 class="resched">Reschedule Service</h1>
-                </div>
+            <div class="logoutside" (click)="logout()">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon">exit_to_app</mat-icon>
+                    <a class="logout-btn">Logout</a>
+                </mat-list-item>
+            </div>
+        </mat-nav-list>
+    </mat-sidenav>
 
-                <div>
-                    <p>Pick a date and timeslot to reschedule your service request.
-                    </p>
-                </div>
+    <mat-sidenav-content>
+        <mat-toolbar>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
+        </mat-toolbar>
 
-                <div>
-                    <mat-form-field class="datepicker" appearance="outline">
-                        <mat-label>Date of Service</mat-label>
-                        <input matInput [min]="tomorrow" [matDatepicker]="picker" formControlName="service_date" autocomplete="off">
-                        <mat-datepicker #picker></mat-datepicker>
-                        <mat-error *ngIf="scheduleForm.get('service_date').hasError('required')">
-                            You must make a selection
-                        </mat-error>
-                    </mat-form-field>
-                    <button mat-raised-button class="dateBtn" (click)="picker.open()">Pick a date</button>
-                </div>
 
-                <!--Time Slots-->
-                <div class="timeslots">
-                    <h1 class="timeslot">Select a time slot</h1>
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe">
-                        <button mat-stroked-button class="tech1Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe>
-                        <button mat-stroked-button class="tech1Btn">
+
+        <div class="container">
+
+
+
+            <div>
+                <mat-card class="summary">
+                    <form [formGroup]="scheduleForm" (ngSubmit)="schedSubmit()">
+                        <div>
+                            <img class="reschedulevec" mat-card-image src="../../assets/reschedule.png">
+
+                            <h1 class="resched">Reschedule Service</h1>
+                        </div>
+
+                        <div>
+                            <p>Pick a date and timeslot to reschedule your service request.
+                            </p>
+                        </div>
+
+                        <div class="date">
+                            <mat-form-field class="datepicker" appearance="outline">
+                                <mat-label>Date of Service</mat-label>
+                                <input matInput [min]="tomorrow" [matDatepicker]="picker" formControlName="service_date" autocomplete="off">
+                                <mat-datepicker #picker></mat-datepicker>
+                                <mat-error *ngIf="scheduleForm.get('service_date').hasError('required')">
+                                    You must make a selection
+                                </mat-error>
+                            </mat-form-field>
+                            <button mat-raised-button class="dateBtn" (click)="picker.open()">Pick a date</button>
+                        </div>
+
+                        <!--Time Slots-->
+                        <div class="timeslots">
+                            <h1 class="timeslot">Select a time slot</h1>
+                            <div *ngIf="activeTechnicians.length == 0; else showAvailalbe">
+                                <button mat-stroked-button class="tech1Btn" disabled>Fully Booked</button>
+                            </div>
+                            <ng-template #showAvailalbe>
+                                <button mat-stroked-button class="tech1Btn">
                             <input type="radio" value="7:00am - 10:00am" formControlName="service_timeslot" required>7:00am-10:00am
                             <h1 class="h1technicians"> {{activeTechnicians.length}} slot(s) available </h1>
                         </button>
-                    </ng-template>
+                            </ng-template>
 
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe1">
-                        <button mat-stroked-button class="tech2Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe1>
-                        <button mat-stroked-button class="tech2Btn" value="10:00am-1:00pm">
+                            <div *ngIf="activeTechnicians.length == 0; else showAvailalbe1">
+                                <button mat-stroked-button class="tech2Btn" disabled>Fully Booked</button>
+                            </div>
+                            <ng-template #showAvailalbe1>
+                                <button mat-stroked-button class="tech2Btn" value="10:00am-1:00pm">
                             <input type="radio" value="10:00am - 1:00pm" formControlName="service_timeslot" required>10:00am-1:00pm
                             <h1 class="h1technicians">{{activeTechnicians.length}} slot(s) available </h1>
                         </button>
-                    </ng-template>
+                            </ng-template>
 
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe2">
-                        <button mat-stroked-button class="tech3Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe2>
-                        <button mat-stroked-button class="tech3Btn" value="1:00pm-3:00pm">
+                            <div *ngIf="activeTechnicians.length == 0; else showAvailalbe2">
+                                <button mat-stroked-button class="tech3Btn" disabled>Fully Booked</button>
+                            </div>
+                            <ng-template #showAvailalbe2>
+                                <button mat-stroked-button class="tech3Btn" value="1:00pm-3:00pm">
                             <input type="radio" value="1:00pm - 3:00pm" formControlName="service_timeslot" required>1:00pm-3:00pm
                             <h1 class="h1technicians">{{activeTechnicians.length}} slot(s) available</h1>
                         </button>
-                    </ng-template>
-                    <div *ngIf="activeTechnicians.length == 0; else showAvailalbe3">
-                        <button mat-stroked-button class="tech3Btn" disabled>Fully Booked</button>
-                    </div>
-                    <ng-template #showAvailalbe3>
-                        <button mat-stroked-button class="tech3Btn" value="3:00pm-6:00pm">
-                            <input type="radio" value="3:00pm - 6:00pm" formControlName="service_timeslot" required>3:00pm-6:00pm
+                            </ng-template>
+
+                            <div *ngIf="activeTechnicians.length == 0; else showAvailalbe3">
+                                <button mat-stroked-button class="tech3Btn" disabled>Fully Booked</button>
+                            </div>
+                            <ng-template #showAvailalbe3>
+                                <button mat-stroked-button class="tech4Btn" value="3:00pm-6:00pm">
+                            <input type="radio" value="3:00pm - 6:00pm" formControlName="service_timeslot" required> 3:00pm-6:00pm
                             <h1 class="h1technicians">{{activeTechnicians.length}} slot(s) available</h1>
                         </button>
+                            </ng-template>
+
+
+
+                        </div>
+                    </form>
+                </mat-card>
+
+
+
+                <div>
+
+
+                    <div *ngIf="!scheduleForm.valid; else enable">
+                        <button mat-stroked-button class="reschedBtn" type="submit" [disabled]="!scheduleForm.valid">Confirm</button>
+                    </div>
+                    <ng-template #enable>
+                        <button mat-raised-button class="reschedBtn-enable" type="submit">Confirm</button>
                     </ng-template>
+                    <button mat-stroked-button class="backBtn" routerLink="/dashboard">Cancel</button>
                 </div>
-
-            </form>
-        </mat-card>
-
-        <div>
-
-
-            <div *ngIf="!scheduleForm.valid; else enable">
-                <button mat-stroked-button class="reschedBtn" type="submit" [disabled]="!scheduleForm.valid">Confirm</button>
             </div>
-            <ng-template #enable>
-                <button mat-raised-button class="reschedBtn-enable" type="submit">Confirm</button>
-            </ng-template>
-            <button mat-stroked-button class="backBtn" routerLink="/dashboard">Cancel</button>
         </div>
-    </div>
-</div>
